# misanthropic

./: Cargo.toml  README.md  install.sh
backend/: package-lock.json  package.json  tsconfig.json  wrangler.toml
backend/migrations/: 0001_init.sql
backend/src/: index.ts
docs/plans/: 2026-03-13-misanthropic-design.md  2026-03-13-misanthropic-implementation.md
src/: api.rs  buildings.rs  combat.rs  economy.rs  enemies.rs  flavor.rs  jsonl.rs  lib.rs  main.rs  persistence.rs  prestige.rs  research.rs  sectors.rs  state.rs
src/ui/: boot.rs  buildings.rs  combat.rs  combat_menu.rs  dashboard.rs  leaderboard.rs  market.rs  mod.rs  research.rs
tests/: buildings_tests.rs  combat_tests.rs  economy_tests.rs  flavor_tests.rs  integration_test.rs  persistence_tests.rs  prestige_tests.rs  research_tests.rs  sectors_tests.rs  state_tests.rs
