[package]
name = "misanthropic"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
glob = "0.3"
once_cell = "1"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
